update git ignore

--- a/platforms/android/.gitignore
+++ b/platforms/android/.gitignore
@@ -1,8 +1,8 @@
 # Non-project-specific build files:
 build.xml
 local.properties
-/gradlew
-/gradlew.bat
+#/gradlew
+#/gradlew.bat
 /gradle
 # Ant builds
 ant-build
